@@ -18,14 +18,14 @@ data_cb (void *buffer, size_t size, gpointer user_data,
 
 void
 done_cb (FluDownloaderTaskOutcome outcome, int http_status_code,
-    size_t downloaded_size, gpointer user_data,
+    int os_status_code, size_t downloaded_size, gpointer user_data,
     FluDownloaderTask *task)
 {
-  g_printf ("Transfer #%p done %s. HTTP Code = %d. %" G_GSIZE_FORMAT
-      " downloaded bytes (%s).\n",
+  g_printf ("Transfer #%p done %s. HTTP Code = %d. OS Code = %d. %"
+      G_GSIZE_FORMAT " downloaded bytes (%s).\n",
       user_data,
       outcome == FLUDOWNLOADER_TASK_OK ? "OK" : "WITH ERRORS", http_status_code,
-      downloaded_size, fludownloader_task_get_url (task));
+      os_status_code, downloaded_size, fludownloader_task_get_url (task));
 }
 
 int
