@@ -28,8 +28,8 @@ typedef gboolean (*FluDownloaderDataCallback) (void *buffer, size_t size,
 
 /* Done callback. Called when a download finishes. */
 typedef void (*FluDownloaderDoneCallback) (FluDownloaderTaskOutcome outcome,
-    int http_status_code, size_t downloaded_size, gpointer user_data,
-    FluDownloaderTask *task);
+    int http_status_code, int os_status_code, size_t downloaded_size,
+    gpointer user_data, FluDownloaderTask *task);
 
 /* Initialize the library */
 void fludownloader_init ();
